updated manuscript folder

--- a/Manuscript/Phylogenetic-Analysis-of-Indels_current/main.bib
+++ b/Manuscript/Phylogenetic-Analysis-of-Indels_current/main.bib
@@ -17,6 +17,17 @@
   publisher={Elsevier}
 }
 
+@article{lederman2006microbicides,
+  title={Microbicides and other topical strategies to prevent vaginal transmission of HIV},
+  author={Lederman, Michael M and Offord, Robin E and Hartley, Oliver},
+  journal={Nature Reviews Immunology},
+  volume={6},
+  number={5},
+  pages={371},
+  year={2006},
+  publisher={Nature Publishing Group}
+}
+
 @article{drummond2003inference,
   title={Inference of viral evolutionary rates from molecular sequences},
   author={Drummond, Alexei and Pybus, Oliver G and Rambaut, Andrew},
