--- a/Manuscript/Phylogenetic-Analysis-of-Indels_current/supplement.tex
+++ b/Manuscript/Phylogenetic-Analysis-of-Indels_current/supplement.tex
@@ -105,6 +105,15 @@
     \label{pngs-totals}
 \end{figure}
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=.95\textwidth, trim={3mm, 0mm, 0mm, 0mm}, clip]{boxplot_logGD.pdf}
+    \caption{ Log$_{10}$-transformed genetic distances of sequences participating in a cherry stratified by group M clade. 
+    For each clade in the order shown, counts of sequences with zero genetic distance were 16, 0, 6, 406, 24, 12, 24, and 2, respectively. 
+    Although individual sequences had genetic distances of zero, no cherries in our data set had cumulative genetic distances of zero.}
+    \label{boxplot_GD}
+\end{figure}
+
 \clearpage
 
 \section * {Supplementary Tables}
