--- a/Manuscript/Phylo-current/main.tex
+++ b/Manuscript/Phylo-current/main.tex
@@ -95,11 +95,11 @@ $^3$ Department of Microbiology \& Immunology, Western University, London N6A 3K
 \begin{flushright}
 Corresponding Author
 
-John Palmer
+Art FY Poon
 
-647-867-1240
+(519) 661-2111 x 87978
 
-jpalme56@uwo.ca
+apoon42@uwo.ca
 \end{flushright}
 \newpage
 
