--- a/Manuscript/Phylo-current/supplement.tex
+++ b/Manuscript/Phylo-current/supplement.tex
@@ -108,11 +108,11 @@
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=.95\textwidth, trim={3mm, 0mm, 0mm, 0mm}, clip]{boxplot_logGD.pdf}
-    \caption{ Log$_{10}$-transformed genetic distances of sequences participating in cherries stratified by group M clade. 
-    Box widths are representative of the number of cherry-derived sequences in the seven clades. 
-    Sequences with zero genetic distance were excluded from this visualization. 
-    For each clade in the order shown, counts of these filtered sequences were 16, 0, 6, 406, 24, 12, 24, and 2, respectively. 
-    Although individual sequences had genetic distances of zero, no cherries in our data set had combined genetic distances of zero.}
+    \caption{ Log$_{10}$-transformed genetic distances of cherries stratified by group M clade. 
+    Box widths are representative of the number of cherries retrieved from the seven clades. 
+    Cherries with zero genetic distance were excluded from this visualization. 
+    For each clade in the order shown, counts of these filtered cherry pairs were 8, 0, 3, 203, 12, 6, and 1, respectively. 
+    Significant differences in adjacent group means were determined using a Wilcoxon rank sum test after adjusting for multiple comparisons and are indicated by * symbols. There were 68 instances of cherries with a combined branch length of zero that contained an indel. }
     \label{boxplot_GD}
 \end{figure}
 
